--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 @plugin "daisyui";
+ @plugin "daisyui";
+ @plugin "daisyui" {
+   themes: light --default, dark --prefersdark;
+ }
 a.active {
   color: #2563eb; /* blue-600 */
   font-weight: bold;
