--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
    themes: light --default, dark --prefersdark;
  }
 a.active {
-  color: #2563eb; /* blue-600 */
-  font-weight: bold;
-  border-bottom: 2px solid #2563eb;
+  color: #00BBA7; /* blue-600 */
+
+ 
 }
